complete search price

--- a/product/templates/products/list.html
+++ b/product/templates/products/list.html
@@ -36,9 +36,9 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">Price Range</span>
                     </div>
-                    <input type="text" name="price_from" aria-label="First name" placeholder="From"
+                    <input type="number" name="price_from"  value="{{ price_from }}" aria-label="First name" placeholder="From"
                            class="form-control">
-                    <input type="text" name="price_to" aria-label="Last name" placeholder="To" class="form-control">
+                    <input type="number" name="price_to" value="{{ price_to }}" aria-label="Last name" placeholder="To" class="form-control">
                 </div>
             </div>
             <div class="col-md-2">
