--- a/product/templates/products/list.html
+++ b/product/templates/products/list.html
@@ -122,6 +122,58 @@
             </div>
             <div class="col-md-2">
 
+
+
+      <div class="row">
+        <div class="col-md-12">
+
+          {% if listings.has_other_pages %}
+            <ul class="pagination">
+              {% if listings.has_previous %}
+                <li class="page-item">
+                  <a href="?page={{ listings.previous_page_number }}" class="page-link">&laquo;</a>
+                </li>
+                {% else %}
+                  <li class="page-item disabled"></li>
+                  <a class="page-link">&laquo;</a>
+              {% endif  %}
+
+
+
+              {% for i in listings.paginator.page_range %}
+                {% if listings.number == i %}
+                  <li class="page-item active">
+                    <a class="page-link">{{i}}</a>
+                  </li>
+                {% else %}
+                  <li class="page-item">
+                    <a href="?page={{i}}" class="page-link">{{i}}</a>
+
+                  </li>
+                {% endif %}
+              {% endfor  %}
+
+
+            {% if listings.has_next %}
+              <li class="page-item">
+                <a href="?page={{ listings.next_page_number }}" class="page-link">&raquo;</a>
+              </li>
+              {% else %}
+                <li class="page-item disabled"></li>
+                <a class="page-link">&raquo;</a>
+            {% endif  %}
+
+
+            </ul>
+          {% else %}
+          {% endif %}
+
+        </div>
+      </div>
+
+
+
+
             </div>
         </div>
     </div>
