--- a/product/templates/products/list.html
+++ b/product/templates/products/list.html
@@ -93,7 +93,7 @@
                     </td>
                     <td>
                         <div class="btn-group btn-group-sm">
-                            <a href="" class="btn btn-success">Edit</a>
+                            <a href="{{ listing.id }}" class="btn btn-success">Edit</a>
                         </div>
                     </td>
                 </tr>
