--- a/product/templates/products/edit.html
+++ b/product/templates/products/edit.html
@@ -86,7 +86,7 @@
             <form  method="POST">
                 {% csrf_token %}
 
-                {{ form }}
+                {{ form.as_p }}
 
                 <input type="submit" name="Submit">
             </form>
