--- a/product/templates/products/list.html
+++ b/product/templates/products/list.html
@@ -10,7 +10,9 @@
 
 
 <div class="card">
-    <form action="{% url 'product:list.product' %}" method="get" class="card-header">
+    <form action="{% url 'product:list.product' %}" method="POST" class="card-header">
+                        {% csrf_token %}
+
         <div class="form-row justify-content-between">
             <div class="col-md-2">
                 <input type="text" name="title" placeholder="Product Title" value="{{ values.title }}" class="form-control">
